# hubspot-claude

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SKILL.md  TASKS.md  healthcare-recruiter-hubspot-setup.md  pyproject.toml  review-findings-2026-07-14.md
.claude-plugin/: marketplace.json  plugin.json
docs/: API_REFERENCE.md  DEMO_SCRIPT.md  PRD.md  QUICKSTART.md  V4_FLOWS_API_Gotchas_and_Decisions.md  WORKFLOWS_AND_REPORTS_SETUP_GUIDE.md  competitive-analysis-hubspot-repos.md  implementation-log-2026-05-13.md  realestate-crm-architecture.md
hooks/: hooks.json  install.sh
output-styles/: hubspot-terse.md
plans/: hubspot-skill-design.html
scripts/: build_realestate_crm.py  build_realestate_crm_fix.py  build_realestate_lists.py  build_realestate_lists_reports.py  build_realestate_workflows.py  build_sample_data.py  check-artifact-allowlist.sh  fix_native_listings_properties.py
specs/: 01-concept-brief.md  02-validation-report.md  03-concept-development.md  SPEC_LOG.md
tests/: conftest.py  routing_corpus.yaml  test_acceptance_delete_list.py  test_agent_dispatch.py  test_agents_analytics.py  test_agents_analytics_reporting.py  test_agents_associations.py  test_agents_base.py  test_agents_custom_objects.py  test_agents_engagements.py  test_agents_hygiene.py  test_agents_lists.py  test_agents_objects.py  test_agents_phase10_14.py  test_agents_phase6_7.py  test_agents_phase8_9.py  test_agents_pipelines.py  test_agents_properties.py  test_agents_raw_api.py  test_agents_service.py  (+95 more)
(+184 files in other folders)
