[project]
name = "hubspot-agent"
version = "0.1.5"
description = "Claude Code skill for HubSpot CRM administration"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Izzy Aly" }]
keywords = ["hubspot", "crm", "sales", "automation"]
dependencies = [
    "httpx>=0.27,<0.28",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/promptmetrics/hubspot-claude"
Repository = "https://github.com/promptmetrics/hubspot-claude"

[project.scripts]
hubspot = "hubspot_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-httpx>=0.30,<0.31",
    "respx>=0.21,<0.22",
    "hypothesis>=6.0,<7",
    "pyyaml>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package the JSON blueprint data alongside the Python source so
# importlib.resources.files(...)/"data" resolves inside the wheel.
packages = ["src/hubspot_agent"]
